--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "5.2.1",
     "foundation-sites": "^6.6.3",
     "jquery": "^3.5.1",
+    "motion-ui": "^2.0.3",
     "sass-loader": "^10.1.0",
     "turbolinks": "^5.2.0",
     "webpacker": "^4.6.0",
