--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "devDependencies": {
     "webpack-dev-server": "^3.11.1",
     "yarn": "^1.22.10"
-  }
+  },
+  "engines" : { "node" : "12.x" }
 }
